BugFix & Scrollbar Design

--- a/style.css
+++ b/style.css
@@ -2,6 +2,25 @@ body {
     background-color: rgba(33, 37, 41, 0.9) !important;
 }
 
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #ffffff79;
+}
+
 h3::first-letter {
     text-transform: capitalize;
 }
